--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 	<style type="text/css">
-	body {
-		padding-top: 20px;
+	body {  		padding-top: 20px;
 		padding-bottom: 40px;
 	}
 	.container {
@@ -33,9 +32,7 @@
 		height: 40px;
 		line-height: 40px;
 	}
-	div.row {
-		border: 1px solid;
-	}
+	div.row { border: 1px solid; }
 	</style>
 </head>
 <body>
