--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 		padding-bottom: 40px;
 	}
 	.container {
-		width: 960px;
-	}
+		width: 960px}
 	p.lead {
 		padding-top: 15px;
 	}
@@ -23,7 +22,6 @@
 		text-align: center;
 	}
 	.video {
-		/* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
 		height: 124px;
 		line-height: 124px;
 	}
