--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://i.imgur.com/Wg2ni8E.jpg?1">
+          <img class="img-polaroid" src="http://i.imgur.com/Wg2ni8E.jpg?1" alt="zeug">
         </div>
 
         <div class="span5 actions">
