updated font style

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 		line-height: 30px;
 	}
 	p {
-		font-size: 18px;
-		line-height: 24px;
+		font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, Helvetica, sans-serif;
+		font-style: normal;
+		font-size: 1.2em;
+		line-height: 1.3em;
 	}
 
 	.pitch {
@@ -105,6 +107,7 @@
 		border-radius: 10px;
 		border: none;
 		box-shadow: 0 0 8px 2px rgba(0,0,0,0.1);
+		padding: 25px;
 	}
     </style>
   </head>
